[package]
name = "hexadventure"
version = "0.1.0"
authors = ["as-f <as-f@users.noreply.github.com>"]

description = ""
repository = "https://github.com/as-f/hex-adventure"
readme = "README.md"
keywords = ["roguelike"]
license = "MIT"

[dependencies]
rand = { version = "0.5", features = ["serde1"] }
serde = "1.0"
serde_derive = "1.0"
num = "0.2"
